<resources>
    <string name="app_name">Qeeqbii</string>
    <string name="welcome_text">With Qeeqbii you will eat healthy again in no time!</string>
    <string name="cancer_data">Cancer DataBase</string>
    <string name="fat_graph">Fats</string>
    <string name="sugar_graph">Sugar</string>
    <string name="calories_graph">Calories</string>
    <string name="salt_graph">Salts</string>
    <string name="search_in_database">SEARCH FOR HARMFUL\nINGREDIENTS</string>
    <string name="buy_product">Buy this product</string>
    <string name="levenshtein_nquery">LEVENSHTEIN\nQUERY</string>
    <string name="ratcliff_nquery">RATCLIFF\nQUERY</string>
    <string name="type_query_here">Type query here</string>
    <string name="perfect_match_nquery">PERFECT MATCH\nQUERY</string>
    <string name="query_answer">Query answer</string>
    <string name="set_threshold">Set threshold\nfor Ratcliff query:</string>
    <string name="default_ratcliff_theshold">0.8</string>
    <string name="allergies">Allergies:</string>
    <string name="search_product">search product</string>
    <string name="graphs">Graphs</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="cancer_database">Cancer Database</string>
    <string name="open"> Open </string>
    <string name="close"> Close </string>
    <string name="nav_header">Menu</string>
    <string name="title_activity_shopping_cart">ShoppingCart</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="cheese">cheese</string>
    <string name="apple">apple</string>
    <string name="chips">chips</string>
    <string name="wine">wine</string>
    <string name="graph">graph</string>
    <string name="meat">meat</string>
    <string name="vegetables">vegetables</string>
    <string name="create_account">Create Account</string>
    <string name="shopping_list">Shopping List</string>
    <string name="empty_field">Empty field</string>
    <string name="scanned_products">Scanned Products</string>
    <string name="product_name_in_graph">Product name</string>
    <string name="little_sentence_graph">100g of this product contains:</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="image_to_share">Image to share</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="camera_perm_ok">Received camera permission</string>
    <string name="please_allow_camera">Please grant camera permission to use Qeeqbii</string>
    <string name="main_activity">Main Activity</string>
    <string name="cancer_data_query">Cancer Data Query</string>
    <string name="facebook_share_button">facebook share button</string>
    <string name="title_activity_shopping_cart_statistics">ShoppingCartStatistics</string>
    <string name="action_settings">Settings</string>
    <string name="tab_1_monthly_stats">tab_1_monthly_stats</string>
    <string name="saussage">saussage</string>
    <string name="bottle">Bottle</string>
    <string name="water">Water</string>
    <string name="biscuit">biscuit</string>
    <string name="cocktail">Cocktail</string>
    <string name="donut">Donut</string>
    <string name="fruit">Fruit</string>
    <string name="exotic_fruit">Exotic Fruit</string>
    <string name="hot_beverage">Hot Beverage</string>
    <string name="butchery">Butchery</string>
    <string name="show_saved_products_activity">Show saved products</string>
    <string name="Chat">Chat</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="default_status">Hi there, I\'m using Qeeqbii App</string>
    <string name="default_age">I need to enter my age</string>
    <string name="default_allergies">I need to enter my allergies</string>
    <string name="default_degout">I need to enter what I do not want to eat</string>
    <string name="MainActivityChat">MainActivityChat</string>
    <string name="ProfileActivity">ProfileActivity</string>
    <string name="ActivityChat">ActivityChat</string>
    <string name="EnterMessage">Enter Message</string>
    <string name="YourAge">Your Age</string>
    <string name="savechanges">SAVE CHANGES</string>
    <string name="donotwant">Things you don\'t want to eat</string>
    <string name="LOGIN">LOGIN</string>
    <string name="youraccount">Login to your Account</string>
    <string name="YourEmail">Your Email</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="title_activity_product_comparison">Compare Products</string>
    <string name="criteria">Criteria</string>
    <string name="scan_at_least_two">Please scan at least two products for comparison</string>
    <string name="cannot_obtain_nutrients">Cannot obtain nutrients</string>
    <string name="total_friend">Total Friends</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="display_name_2">Display Name</string>
    <string name="user_default_status">User default Status</string>
    <string name="_00_00">00:00</string>
    <string name="statistics">statistics</string>
    <string name="current_user_status">Current User Status</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="total_friends">Total Friends</string>
    <string name="decline_friend_request">DECLINE FRIEND REQUEST</string>
    <string name="set_age">SET AGE</string>
    <string name="set_allergies">SET ALLERGIES</string>
    <string name="set_do_not_like">SET DO NOT LIKE</string>
    <string name="change_status">CHANGE STATUS</string>
    <string name="change_image">CHANGE IMAGE</string>
    <string name="welcome">Welcome to Qeeqbii \n App</string>
    <string name="have_already">ALREADY HAVE ACCOUNT</string>
    <string name="status">Your Status</string>
    <string name="no_request">You have no requests</string>
    <string name="account_setting">Account Settings</string>
    <string name="message_text">Message Text</string>
    <string name="smiley">:)</string>
    <string name="user_default">User default Status</string>
    <string name="name1">Name 1</string>
    <string name="name2">Name 2</string>
    <string name="welcome_to_qeeqbii_n_app">Welcome to Qeeqbii   App</string>
    <string name="already_have_account">ALREADY HAVE ACCOUNT</string>
    <string name="loading_wait">Please wait while we load the user data.</string>
    <string name="loading_user_info">Loading User Data</string>
    <string name="not_friends">Not Friends</string>
    <string name="accept_friend">Accept Friend Request</string>
    <string name="cancel_freind_request">Cancel Friend Request</string>
    <string name="unfriend">Unfriend this Person</string>
    <string name="last_seen">Last Seen</string>
    <string name="your_status">Your Status</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="your_allergies">Your Allergies</string>
    <string name="name_2">Name 2</string>
    <string name="name_1">Name 1</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="online">Online</string>
    <string name="cancel_request">Cancel Friend Request</string>
    <string name="compare_products">Compare Products</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="save_and_continue">Save</string>
</resources>